Fix List.of to Arrays.asList